--- a/main.css
+++ b/main.css
@@ -38,3 +38,10 @@ h1:hover p {
   transform: scale(1.4);
   cursor: pointer;
 }
+
+button {
+  background-color: #f05123;
+  padding: 9px 16px;
+  border-radius: 999px;
+  border: none;
+}
